--- a/homelab/templates/blog.yaml
+++ b/homelab/templates/blog.yaml
@@ -18,7 +18,7 @@ spec:
         - name: dockerconfigjson-github-com
       containers:
         - name: blog
-          image: {{ .Values.images.blog.image }}:{{ .Values.images.blog.tag }}
+          image: "{{ .Values.images.blog.image }}:{{ .Values.images.blog.tag }}"
           ports:
             - containerPort: 80
               protocol: TCP
