--- a/homelab/templates/change_detection.yaml
+++ b/homelab/templates/change_detection.yaml
@@ -25,8 +25,10 @@ spec:
         - name: changedetection
           image: {{ .Values.images.changedetection.image }}:{{ .Values.images.changedetection.tag }}
           env:
-            - name: WEBDRIVER_URL
-              value: "http://localhost:4444/wd/hub"
+            - name: PLAYWRIGHT_DRIVER_URL
+              value: ws://localhost:3000/?stealth=1&--disable-web-security=true
+            # - name: WEBDRIVER_URL
+            #   value: "http://localhost:4444/wd/hub"
             - name: BASE_URL
               value: "https://changes.sethpyle.com"
             - name: FETCH_WORKERS
@@ -43,22 +45,27 @@ spec:
               cpu: "500m"
           volumeMounts:
             - name: changedetection-data
-              mountPath: /config
+              mountPath: /datastore
           imagePullPolicy: {{ .Values.images.changedetection.imagePullPolicy }}
-        - name: seleniarm
-          image: seleniarm/standalone-chromium:111.0
-          env:
-            - name: VNC_NO_PASSWORD
-              value: "1"
-            - name: SCREEN_WIDTH
-              value: "1920"
-            - name: SCREEN_HEIGHT
-              value: "1080"
-            - name: SCREEN_DEPTH
-              value: "24"
+        - name: browserless
+          image: browserless/chrome:latest
           volumeMounts:
             - mountPath: /dev/shm
               name: dshm
+        # - name: seleniarm
+        #   image: seleniarm/standalone-chromium:111.0
+        #   env:
+        #     - name: VNC_NO_PASSWORD
+        #       value: "1"
+        #     - name: SCREEN_WIDTH
+        #       value: "1920"
+        #     - name: SCREEN_HEIGHT
+        #       value: "1080"
+        #     - name: SCREEN_DEPTH
+        #       value: "24"
+        #   volumeMounts:
+        #     - mountPath: /dev/shm
+        #       name: dshm
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
