--- a/homelab/templates/nocodb.yaml
+++ b/homelab/templates/nocodb.yaml
@@ -1,80 +1,86 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: rss-bridge
+  name: nocodb
   labels:
-    app: rss-bridge
+    app: nocodb
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: rss-bridge
+      app: nocodb
   template:
     metadata:
       labels:
-        app: rss-bridge
+        app: nocodb
     spec:
       volumes:
-        - name: rss-bridge-data
+        - name: nocodb-data
           persistentVolumeClaim:
-            claimName: rss-bridge-pvc
+            claimName: nocodb-data-pvc
       containers:
-        - name: rss-bridge
-          image: "{{ .Values.images.rssBridge.image }}:{{ .Values.images.rssBridge.tag }}"
+        - name: nocodb
+          image: "{{ .Values.images.nocodb.image }}:{{ .Values.images.nocodb.tag }}"
+          env:
+            - name: "NC_DB"
+              value: "pg://postgres:5432?u=nocodb&p=nocodb&d=nocodb"
+          ports:
+            - containerPort: 8080
+              protocol: TCP
           resources:
             requests:
-              memory: "64Mi"
-              cpu: "50m"
-            limits:
               memory: "128Mi"
               cpu: "100m"
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
           volumeMounts:
-            - name: rss-bridge-data
-              mountPath: /config
+            - name: nocodb-data
+              mountPath: /usr/app/data
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: rss-bridge-pvc
+  name: nocodb-data-pvc
 spec:
   accessModes:
     - ReadWriteOnce
   storageClassName: local-path
   resources:
     requests:
-      storage: 500Mi
+      storage: 5Gi
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: rss-bridge
+  name: nocodb
   labels:
-    app: rss-bridge
+    app: nocodb
 spec:
   ports:
     - protocol: TCP
-      port: 80
-      targetPort: 80
+      port: 8080
+      targetPort: 8080
   selector:
-    app: rss-bridge
+    app: nocodb
   type: ClusterIP
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: rss-bridge-ingress
+  name: nocodb-ingress
 spec:
   tls:
     - secretName: "le-cert"
     - hosts:
-        - rssbridge.sethpyle.com
+        - db.sethpyle.com
   rules:
-    - host: rssbridge.sethpyle.com
+    - host: db.sethpyle.com
       http:
         paths:
           - pathType: ImplementationSpecific
             backend:
               service:
-                name: rss-bridge
+                name: nocodb
                 port:
-                  number: 80
+                  number: 8080
