--- a/homelab/templates/nodered.yaml
+++ b/homelab/templates/nodered.yaml
@@ -23,7 +23,7 @@ spec:
             name: nodered-settings-configmap
       containers:
         - name: nodered
-          image: {{ .Values.images.nodered.image }}:{{ .Values.images.nodered.tag }}
+          image: "{{ .Values.images.nodered.image }}:{{ .Values.images.nodered.tag }}"
           ports:
             - containerPort: {{ .Values.nodered.port }}
               protocol: TCP
