--- a/homelab/templates/redis.yaml
+++ b/homelab/templates/redis.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: redis
-          image: {{ .Values.images.redis.image }}:{{ .Values.images.redis.tag }}
+          image: "{{ .Values.images.redis.image }}:{{ .Values.images.redis.tag }}"
           ports:
             - containerPort: {{ .Values.redis.port }}
               protocol: TCP
