--- a/homelab/templates/trilium.yaml
+++ b/homelab/templates/trilium.yaml
@@ -20,7 +20,7 @@ spec:
             claimName: trilium-pvc
       containers:
         - name: trilium
-          image: {{ .Values.images.trilium.image }}:{{ .Values.images.trilium.tag }}
+          image: "{{ .Values.images.trilium.image }}:{{ .Values.images.trilium.tag }}"
           env:
             - name: TRILIUM_DATA_DIR
               value: /home/node/trilium-data
@@ -28,11 +28,11 @@ spec:
               value: '8080'
           resources:
             requests:
-              memory: "64Mi"
-              cpu: "50m"
+              memory: "256Mi"
+              cpu: "500m"
             limits:
-              memory: "128Mi"
-              cpu: "100m"
+              memory: "512Mi"
+              cpu: "1"
           volumeMounts:
             - name: trilium-data
               mountPath: /home/node/trilium-data
