--- a/homelab/templates/freshrss.yaml
+++ b/homelab/templates/freshrss.yaml
@@ -20,7 +20,7 @@ spec:
             claimName: freshrss-pvc
       containers:
         - name: postgres
-          image: {{ .Values.images.freshrss.image}}:{{ .Values.images.freshrss.tag }}
+          image: "{{ .Values.images.freshrss.image}}:{{ .Values.images.freshrss.tag }}"
           env:
             - name: "TZ"
               value: "America/Chicago"
