--- a/homelab/templates/authentik.yaml
+++ b/homelab/templates/authentik.yaml
@@ -41,7 +41,7 @@ spec:
               memory: "256Mi"
               cpu: "100m"
             limits:
-              memory: "2Gi"
+              memory: "512Mi"
               cpu: "2"
           imagePullPolicy: {{ .Values.images.authentik.imagePullPolicy }}
 ---
@@ -63,7 +63,7 @@ spec:
     spec:
       containers:
         - name: authentik-worker
-          image: {{ .Values.images.authentik.image}}:{{ .Values.images.authentik.tag }}
+          image: "{{ .Values.images.authentik.image}}:{{ .Values.images.authentik.tag }}"
           args: ["worker"]
           env:
             - name: "AUTHENTIK_REDIS__HOST"
@@ -86,7 +86,7 @@ spec:
               memory: "256Mi"
               cpu: "100m"
             limits:
-              memory: "2Gi"
+              memory: "512Mi"
               cpu: "2"
           imagePullPolicy: {{ .Values.images.authentik.imagePullPolicy }}
 ---
