--- a/homelab/templates/gitea.yaml
+++ b/homelab/templates/gitea.yaml
@@ -95,3 +95,63 @@ spec:
                 name: gitea
                 port:
                   number: 3000
+---
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: git-backup
+spec:
+  schedule: "0 0 * * *"
+  successfulJobsHistoryLimit: 1
+  failedJobsHistoryLimit: 1
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          volumes:
+            - name: gitea
+              persistentVolumeClaim:
+                claimName: gitea-pvc
+          containers:
+            - name: git-backup
+              image: "{{ .Values.images.pgBackup.image }}:{{ .Values.images.pgBackup.tag }}"
+              env:
+                - name: AWS_ACCESS_KEY_ID
+                  valueFrom:
+                    secretKeyRef:
+                      name: 'aws-storage-creds'
+                      key: 'AWS_ACCESS_KEY_ID'
+                - name: AWS_SECRET_ACCESS_KEY
+                  valueFrom:
+                    secretKeyRef:
+                      name: 'aws-storage-creds'
+                      key: 'AWS_SECRET_ACCESS_KEY'
+                - name: S3_BUCKET
+                  value: {{ .Values.pgBackup.s3Bucket }}
+                - name: PG_USER
+                  value: {{ .Values.postgres.user }}
+                - name: PG_PASS
+                  value: {{ .Values.postgres.pass }}
+                - name: PG_HOST
+                  value: postgres
+                - name: PG_PORT
+                  value: "{{ .Values.postgres.port }}"
+                - name: DISCORD_WEBHOOK
+                  value: "https://push.sethpyle.com/postgres_backup"
+              command:
+                - /bin/sh
+                - -c
+                - tar -zcvf /tmp/git-backup-$(date +%Y%m%d-%H%M).tar.gz /data/git; aws s3 cp /tmp/*.tar.gz $S3_BUCKET;
+              imagePullPolicy: {{ .Values.images.pgBackup.imagePullPolicy }}
+              resources:
+                requests:
+                  memory: "150Mi"
+                  cpu: "250m"
+                limits:
+                  memory: "300Mi"
+                  cpu: "500m"
+              volumeMounts:
+                - name: gitea
+                  mountPath: /data
+          restartPolicy: OnFailure
+      backoffLimit: 3
